fix: pic thumbnail in title failed when multiple bins
* not sure why, swiepr was not visible in the title.

--- a/ionic-gib/src/app/views/pic-view/pic-view.component.scss
+++ b/ionic-gib/src/app/views/pic-view/pic-view.component.scss
@@ -4,6 +4,14 @@
   overflow: hidden;
 }
 
+.title-div {
+  ion-thumbnail {
+    // not sure why, but this is necessary for the swiper when title is a pic with multiple
+    // pics (thus the swiper)
+    height: auto;
+  }
+}
+
 ion-card {
   width: 96%;
   display: flex;
